# qtcovesavss

./: .gitignore  .qmlls.ini  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: architecture.html  design.html
examples/: kuksa-mock.py
examples/dashboard/: ArcGauge.qml  CMakeLists.txt  CircularGauge.qml  Main.qml  main.cpp
idl/: adas.qface  body.qface  cabin.qface  chassis.qface  common.qface  connectivity.qface  driver.qface  exterior.qface  motionmanagement.qface  powertrain.qface  safety.qface  service.qface  vehicle.qface
src/: CMakeLists.txt
src/adas/: CMakeLists.txt
src/backends/kuksa/: CMakeLists.txt  kuksaclient.cpp  kuksaclient.h  kuksaplugin.cpp  kuksaplugin.h  plugin.json  vsspathmapping.cpp  vsspathmapping.h
src/backends/kuksa/backends/: adasbackends.cpp  adasbackends.h  bodybackends.cpp  bodybackends.h  cabinbackends.cpp  cabinbackends.h  chassisbackends.cpp  chassisbackends.h  connectivitybackends.cpp  connectivitybackends.h  driverbackends.cpp  driverbackends.h  exteriorbackends.cpp  exteriorbackends.h  motionmanagementbackends.cpp  motionmanagementbackends.h  powertrainbackends.cpp  powertrainbackends.h  safetybackends.cpp  safetybackends.h  servicebackends.cpp  servicebackends.h  vehiclebackends.cpp  vehiclebackends.h
src/backends/kuksa/proto/: NOTICE
src/backends/kuksa/proto/kuksa/val/v2/: val.proto
src/body/: CMakeLists.txt
src/cabin/: CMakeLists.txt
src/chassis/: CMakeLists.txt
src/common/: CMakeLists.txt
src/connectivity/: CMakeLists.txt
src/driver/: CMakeLists.txt
src/exterior/: CMakeLists.txt
src/motionmanagement/: CMakeLists.txt
src/plugins/kuksa/: CMakeLists.txt  enumvalidation.h  kuksaclient.h  kuksaplugin.cpp  kuksaplugin.h  vsspathmapping.cpp
src/plugins/kuksa/backends/: adasbackends.cpp  bodybackends.cpp  cabinbackends.cpp  cabinbackends.h  chassisbackends.cpp  connectivitybackends.cpp  exteriorbackends.cpp  motionmanagementbackends.cpp  powertrainbackends.cpp  safetybackends.cpp  safetybackends.h  servicebackends.cpp  vehiclebackends.cpp
src/powertrain/: CMakeLists.txt
src/safety/: CMakeLists.txt
src/service/: CMakeLists.txt
src/vehicle/: CMakeLists.txt
tests/: CMakeLists.txt
tests/adas/: CMakeLists.txt
tests/body/: CMakeLists.txt
tests/cabin/: CMakeLists.txt
tests/chassis/: CMakeLists.txt
tests/connectivity/: CMakeLists.txt
tests/driver/: CMakeLists.txt
tests/exterior/: CMakeLists.txt
tests/kuksa/: CMakeLists.txt  tst_kuksabackends.cpp
tests/motionmanagement/: CMakeLists.txt
tests/powertrain/: CMakeLists.txt
tests/safety/: CMakeLists.txt
tests/service/: CMakeLists.txt
tests/vehicle/: CMakeLists.txt
