find_package(Qt6 REQUIRED COMPONENTS Test)

add_subdirectory(vehicle)
add_subdirectory(powertrain)
add_subdirectory(body)
add_subdirectory(cabin)
add_subdirectory(adas)
add_subdirectory(chassis)
add_subdirectory(driver)
add_subdirectory(safety)
add_subdirectory(exterior)
add_subdirectory(service)
add_subdirectory(connectivity)
add_subdirectory(motionmanagement)

find_package(Qt6 COMPONENTS Protobuf Grpc QUIET)
if(Qt6Protobuf_FOUND AND Qt6Grpc_FOUND)
    add_subdirectory(kuksa)
endif()
